# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  tasks.py
documentation/: changelog.md  sepcification.md  specification.md  timetracking.md
dokumentaatio/: vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coveragerc
laskarit/viikko2/unicafe/src/tests/: maksukortti_test.py
laskarit/viikko3/: diagram.md  sequencediagram.md
src/: configurations.py  enemy.py  game.py  index.py  mainmenu.py  menu.py  player.py  sprite.py  square.py  square_generator.py
src/db/: db_helper.py  db_highscore.py
src/tests/: sprite_collision_test.py
