[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Patrik Backman <patrik.backman@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
