[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["TrollRoll2 <patrik.backman@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cowsay = "^6.1"
pygame = "^2.6.1"
invoke = "^2.2.0"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.7"
pylint = "^3.3.1"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
